<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:src="@drawable/bg_sportowcy_loading"
            android:title="@string/logowanie"/>
        <item
            android:id="@+id/nav_athlete"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/szukaj_zaw" />
        <item
            android:id="@+id/nav_competition"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/szukaj_konk" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/info" />
    </group>


</menu>
