<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".InfoActivity"
    android:background="@color/beige_background">
 <!--tools:showIn="@layout/app_bar_main">-->


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


     <TextView
         android:layout_centerHorizontal="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="46dp"
         android:gravity="center"
         android:text="@string/app_name"
         android:textSize="30dp"
         android:textColor="@color/violet_background"
         android:fontFamily="@font/ft_righteous"/>

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="80dp"
        android:gravity="center"
        android:text="@string/version"
        android:textSize="20dp"
        android:textColor="@color/violet_background"
        android:fontFamily="@font/ft_righteous"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="120dp"
        android:layout_marginLeft="80dp"
        android:text="@string/author"
        android:textColor="@color/violet_background"
        android:fontFamily="@font/ft_righteous"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="150dp"
        android:layout_marginLeft="80dp"
        android:text="@string/graphics"
        android:textColor="@color/violet_background"
        android:fontFamily="@font/ft_righteous"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="180dp"
        android:layout_marginLeft="80dp"
        android:text="@string/data"
        android:textColor="@color/violet_background"
        android:fontFamily="@font/ft_righteous"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="210dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/app_info"
        android:textColor="@color/violet_background"
        android:fontFamily="@font/ft_righteous"/>



    </RelativeLayout>


 <!---->
</android.support.constraint.ConstraintLayout>